First round of wiring. #readme

--- a/mvc/topper/topper.html
+++ b/mvc/topper/topper.html
@@ -3,7 +3,7 @@
     <nav class="top-bar" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
-          <h1><a href="/#home">CoderDojo Canada</a></h1>
+          <h1><a href="/#home">Synbiota SXSW 2015 PROMO SITE</a></h1>
         </li>
         <!--
         <li class="toggle-topbar menu-icon">
