Adding Synbiota provided partials/assets

--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" 
+		    content="IE=edge">
+		<meta name="viewport" 
+		    content="width=device-width, initial-scale=1">
 
 		<title>Synbiota SXSW 2015 PROMO SITE</title>
-		<meta name="description" content="">
 
 		<!-- fonts -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' 
+		    rel='stylesheet' 
+		    type='text/css'>
 
 		<!-- Bootstrap -->
-		<link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen, projection" rel="stylesheet" type="text/css" />
-		<link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
+		<link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" 
+		    media="screen, projection" 
+		    rel="stylesheet" 
+		    type="text/css" />
+		<link href="/css/print.css" 
+		    media="print" 
+		    rel="stylesheet" 
+		    type="text/css" />
 		<!--[if IE]>
 			<link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
 		<![endif]-->
-		<link href="/css/synbiota.css" rel="stylesheet">
+		<link href="/css/bootstrap_conf.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -221,7 +230,7 @@
 		<script src="/bower_components/angular/angular.js"></script>
 		<script src="/bower_components/angular-route/angular-route.js"></script>
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
-		<script src="/bower_components/bootstrap-sass-official/javscripts/bootstrap.js"></script>
+		<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
 
 		<!-- Angular wiring -->
 		<script src="/js/app.js"></script>
@@ -231,10 +240,6 @@
 		<script src="/mvc/topper/topper-directive.js"></script>
 		<script src="/mvc/foot/foot.js"></script>
 		<script src="/mvc/foot/foot-directive.js"></script>
-
-		<script>
-			$(document).foundation();
-		</script>
 
 	</body>
 </html>
