--- a/mvc/topper/topper.html
+++ b/mvc/topper/topper.html
@@ -1,4 +1,52 @@
-<nav class="navbar navbar-default navbar-fixed-top" ng-controller="TopperCtrl">
+<header>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/welcome">Synbiota</a>
+      </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class=""><a class="" href="http://localhost:5001/about">About</a></li>
+            <li class=""><a href="http://localhost:5001/standard">RDP Standard</a></li>
+            <li class=""><a href="/marketplace_items">DNA market</a></li>
+            <li><a href="http://blog.synbiota.com" target="_blank">Blog</a></li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="/users/sign_up">Create Account</a></li>
+
+              <li class="dropdown">
+              
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Sign in</a>
+                <ul class="dropdown-menu navbar-right">
+                  <li>
+                    <div class="row-fluid" style="padding:5px 5px 5px 5px;">
+                      <form accept-charset="UTF-8" action="/users/sign_in" class="simple_form new_user" id="new_user" method="post" novalidate="novalidate"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="GMw4TwsKCZQNNVqVPfLZNtYbi98b1QiDCWnqpaiLxNA="></div>
+                        <div class="form-group">
+                          <input class="form-control" id="user_email" name="user[email]" placeholder="Email" type="email" value="">                        </div>
+                        <div class="form-group">
+                          <input class="form-control" id="user_password" name="user[password]" placeholder="Password" type="password">                        </div>
+
+                        <div class="remember-me">
+                          <input name="user[remember_me]" type="hidden" value="0"><input id="user_remember_me" name="user[remember_me]" style="margin-top:0px" type="checkbox" value="1">                          <label class="string optional control-label" for="user_remember_me">Remember me</label>                        </div>
+                        
+                        <input class="btn btn-primary btn-block" name="commit" type="submit" value="Sign in">                        <hr>
+                        <a class="forgot-password" href="/users/password/new">Forgot your password?</a></form>                    </div>
+                  </li>
+                </ul>
+              </li>
+            <li>
+              <a href="/basket">
+                <i class="glyphicon glyphicon-shopping-cart"></i>
+                1
+</a>            </li>
+          </ul>
+        </div>
+    </div>
+  </nav>
+</header>
+
+<!--<nav class="navbar navbar-default navbar-fixed-top" ng-controller="TopperCtrl">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -20,6 +68,7 @@
         <li><a href="../navbar/">Login</a></li>
         <li><a href="../navbar-fixed-top/">Sign Up</a></li>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div><!--/.nav-collapse --
   </div>
 </nav>
+-->
