--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 		<script src="/bower_components/angular/angular.js"></script>
 		<script src="/bower_components/angular-route/angular-route.js"></script>
 		<script src="/bower_components/jquery/dist/jquery.js"></script>
+		<script src="/bower_components/jquery-cookie/jquery.cookie.js"></script>
 		<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
 
 		<!-- Angular wiring -->
