Creating blank pages as per naming scheme

--- a/mvc/topper/topper.html
+++ b/mvc/topper/topper.html
@@ -6,14 +6,14 @@
       </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class=""><a class="" href="http://localhost:5001/about">About</a></li>
-            <li class=""><a href="http://localhost:5001/standard">RDP Standard</a></li>
+            <li class=""><a class="" href="/about">About</a></li>
+            <li class=""><a href="/standard">RDP Standard</a></li>
             <li class=""><a href="/marketplace_items">DNA market</a></li>
             <li><a href="http://blog.synbiota.com" target="_blank">Blog</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-              <li><a href="/users/sign_up">Create Account</a></li>
+              <li><a href="https://synbiota.com/">Create Account</a></li>
 
               <li class="dropdown">
               
