--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 			Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
-		<div class="container">
+		<div class="container-fluid">
 			<header data-topper></header>
+
 
 			<section>
 
@@ -69,6 +70,7 @@
 					</div>
 				</div>
 
+				<div class="row">
 				<div class="jumbotron dark-purple">
 					<div class="container">
 						<div class="row">
@@ -76,6 +78,7 @@
 						<h2 class="text-center intro">Seemlessly go from computer to petri dish with Synbiota&rsquo;s flexible software/wetware bio-development platform.</h2>
 						</div>
 					</div>
+				</div>
 				</div>
 				</div>
 
@@ -126,7 +129,7 @@
 								<div class="col-xs-2 text-right">
 									<p>icon</p>
 								</div>
-								<div class="col-md-10 text-left">
+								<div class="col-xs-10 text-left">
 									<h4>#ScienceHack Violacein Factory</h4>
 									<h5>Intermediate</h5>
 								</div>
@@ -212,8 +215,9 @@
               </div>
             </div>
 			
-
-			<footer data-foot></footer>
+            <div class="row">
+				<footer data-foot></footer>
+			</div>
 		</div>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
