Some styling to affect About page in _synbiota.scss.

--- a/platform.html
+++ b/platform.html
@@ -46,14 +46,24 @@
 			Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
-		<div class="container">
+		<div class="container-fluid">
 			<header data-topper></header>
 
 			<section>
                 <!-- PLATFORM CONTENT -->
+                <div class="container">
+	                <div class="row">
+	                	<div class="col-md-12">
+
+	                	</div>
+	                </div>
+	            </div>
+
 			</section>
 
-			<footer data-foot></footer>
+			<div class="row">
+				<footer data-foot></footer>
+			</div>
 		</div>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
