--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
                 <div class="container">
 	                <div class="row">
 	                	<div class="col-md-12">
-			                <p>Synbiota's mission is to standardize biotechnology and make it accessible to everyone.</p>
+			                <h3>Synbiota's mission is to standardize biotechnology and make it accessible to everyone.</h3>
 			                
-			                <p>Synbiota is a set of rapid prototyping tools that move synthetic biology out of institutions, unversities, and large corporations, by lowering the threshold of entry for doing it and using it to solve problems.</p>
+			                <p class="p-highlight">Synbiota is a set of rapid prototyping tools that move synthetic biology out of institutions, unversities, and large corporations, by lowering the threshold of entry for doing it and using it to solve problems.</p>
 
 			                <p>Synbiota is a software and wetware platform that offers the ability to start using the latest in synthetic biology tools to do your work faster and make it sharable.</p>
 
