Drafted top half of standard.html page; doesn't handle responiveness perfectly, but it's nearly there.

--- a/mvc/foot/foot.html
+++ b/mvc/foot/foot.html
@@ -3,7 +3,7 @@
         <div class="row">
           <div class="col-sm-6 col-md-2">
             <h5>Company</h5>
-            <ul>
+            <ul class="no-list-style">
               <li>About</li>
               <li>Team</li>
               <li>Careers</li>
@@ -13,7 +13,7 @@
           </div>
           <div class="col-sm-6 col-md-2">
             <h5>Support</h5>
-            <ul>
+            <ul class="no-list-style">
               <li>FAQ</li>
               <li>Forums</li>
               <li>Contact Us</li>
@@ -21,7 +21,7 @@
           </div>
           <div class="col-sm-6 col-md-2">
             <h5>Resources</h5>
-            <ul>
+            <ul class="no-list-style">
               <li>Method</li>
               <li>Standard</li>
               <li>Case Studies</li>
@@ -29,7 +29,7 @@
           </div>
           <div class="col-sm-6 col-md-2">
             <h5>Shop</h5>
-            <ul>
+            <ul class="no-list-style">
               <li>DNA_MARKT</li>
               <li>Indiegogo</li>
             </ul>
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-sm-12 navbar-footer">
             <nav class="bottom-bar">
-              <ul class="left">
+              <ul class="left no-list-style">
                 <li><a href="#">Terms of Service</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Security</a></li>
