--- a/standard.html
+++ b/standard.html
@@ -46,14 +46,155 @@
 			Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
 
-		<div class="container">
+		<div class="container-fluid">
 			<header data-topper></header>
 
 			<section>
-                <!-- RDP CONTENT -->
+                <!-- PLATFORM CONTENT -->
+                <div class="container">
+	                <div class="row">
+	                	<div class="col-md-10">
+							<h2>Rapid DNA Prototyping Standard</h2>
+							<p>Rapid DNA Prototyping (RDP) is an increasingly popular open source standard for synthetic biology. With its flexible and intuitive system of universally connecting ‘ends,’ the Lego-like RDP Standard makes the design, construction, and validation of sophisticated genetic circuits dramatically more efficient.</p>
+
+							<p>The standard’s modularly designed building block parts can be arranged and assembled into complex circuits accurately, in high yield, and quickly (in hours as opposed to days or weeks), in a biologically-ready form that can be easily ported into an organism and booted for validation.</p>
+
+							<p>Developed by Professor Michael Ellison in the department of Biochemistry at the University of Alberta, the RDP was awarded Best Foundational Advance at the 2009 International Genetically Engineered Machines competition at MIT. It represents a new paradigm where bio-innovators may design, create, validate and iterate on sophisticated, multi-component genetic circuits with unprecedented speed and flexibility.</p>
+
+	                	</div>
+	                </div>
+
+	                <div class="row">
+	                	<div class="col-md-12">
+	                		<h2>RDP Standard Glossary</h2>
+	                		<div class="row row-glossary">
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="circle">
+								       <img class="img img-responsive" src="img/circle-black.png">
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="number">
+	                					<h3>0</h3>
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-2 col-xs-8">
+	                				<h4>Beads</h4>
+	                			</div>
+	                			<div class="col-sm-8 black">
+	                				
+	                			</div>
+	                		</div>
+
+	                		<div class="row row-glossary">
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="circle">
+								       <img class="img img-responsive" src="img/circle-green.png">
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="number">
+	                					<h3>1</h3>
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-2 col-xs-8">
+	                				<h4>Assembly Scaffold</h4>
+	                				<ul class="no-list-style">
+	                					<li>Anchor Origins</li>
+	                					<li>Caps</li>
+	                					<li>Adaptors</li>
+	                				</ul>
+	                			</div>
+	                			<div class="col-sm-8 green">
+	                				<p>The RDP Scaffold consitutes a collection of parts that are required, and therefore common to any DNA circuit design that is built with the RDP standard. This core collection is composed of two sub-categories: A) parts that physically initiate (Anchor), extend (Adapters) and terminate (Cap) the assembly process, and B) parts that assure that the completed circuit can be replicated (replication origins) and maintained (antibiotic resistance genes) within a living cell. Most of these parts are "Composite" in that they contain more than one DNA element and therefore carry out more than one function.</p>
+	                			</div>
+	                		</div>
+
+	                		<div class="row row-glossary">
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="circle">
+								       <img class="img img-responsive" src="img/circle-light-blue.png">
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="number">
+	                					<h3>2</h3>
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-2 col-xs-8">
+	                				<h4>Production Control</h4>
+	                				<ul class="no-list-style">
+	                					<li>Terminator</li>
+	                					<li>RBS</li>
+	                					<li>Promoters</li>
+	                					<li>Operators</li>
+	                					<li>Regulators</li>
+	                				</ul>
+	                			</div>
+	                			<div class="col-sm-8 light-blue">
+	                				<p>Parts in this category are used to produce and control the concentration of any given product. Different formats of control can be achieved by the appropriate selection of production control parts. For example, products can be produced constantly at fixed levels that range from low to high concentration. Alternatively, production levels can be reversibly tuned over time. It is also possible to switch production on or off in response to specific chemical or environmental signals. Controllers can be divided into several functional classes that are described below.</p>
+	                			</div>
+	                		</div>
+
+	                		<div class="row row-glossary">
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="circle">
+								       <img class="img img-responsive" src="img/circle-pink.png">
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="number">
+	                					<h3>3</h3>
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-2 col-xs-8">
+	                				<h4>Product Modifiers</h4>
+	                				<ul class="no-list-style">
+	                					<li>Activators</li>
+	                					<li>Peptide Linkers</li>
+	                					<li>Affinity Tags</li>
+	                					<li>Degredation Signals</li>
+	                					<li>Localization Signals</li>
+	                				</ul>
+	                			</div>
+	                			<div class="col-sm-8 pink">
+	                				<p>Modifiers are parts that are added to either end of a product part thereby modifying both its structure and behaviour. Modifiers can be used to: A) Link products together. B) Provide molecular handles for product identification and purification. C) Provide addresses that direct products to different regions within the cell or secrete them into growth medium, and D) Signals that can shorten the life-span of the product.</p>
+	                			</div>
+	                		</div>
+
+	                		<div class="row row-glossary">
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="circle">
+								       <img class="img img-responsive" src="img/circle-purple.png">
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-1 col-xs-2">
+	                				<div class="number">
+	                					<h3>4</h3>
+	                				</div>
+	                			</div>
+	                			<div class="col-sm-2 col-xs-8">
+	                				<h4>Products</h4>
+	                				<ul class="no-list-style">
+	                					<li>Color</li>
+	                					<li>Light Emissions</li>
+	                					<li>Scent</li>
+	                					<li>Other</li>
+	                				</ul>
+	                			</div>
+	                			<div class="col-sm-8 purple">
+	                				<p>Products are protein molecules that function on their own or in concert with other products to produce cellular outputs that can be easily detected during or following cell growth. In this version of the Tinkerkit, the outputs include a variety of colours that can be viewed under ambient light, fluorescent colours that are viewed under UV light and luminescent colours that can be visualized in total darkness. The kit also includes products that emit odours that smell like banana and wintergreen.</p>
+	                			</div>
+	                		</div>
+	                	</div>
+	                </div>
+	            </div>
+
 			</section>
 
-			<footer data-foot></footer>
+			<div class="row">
+				<footer data-foot></footer>
+			</div>
 		</div>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
