proxima font for body text

--- a/build.html
+++ b/build.html
@@ -10,7 +10,7 @@
     <meta name="viewport" 
         content="width=device-width, initial-scale=1">
 
-    <title>Synbiota DNA Tinker Studio | Building RDP Stardardized Parts</title>
+    <title>Synbiota DNA Tinker Studio | Build RDP Standardized Parts</title>
 
     <!-- fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' 
