Finished draft of index.html

--- a/index.html
+++ b/index.html
@@ -54,157 +54,136 @@
 
 			<div class="container">
 					<div class="row">
-						<div class="col-md-4 pull-right">
-							<h2>DNA Tinker Studio</h2>
-							<p>pre-order now on <strong>indiegogo</strong></p>
-							<h3>What will you build?</h3>
-							<button class="btn btn-primary" type="button">Sign Up</button>
+						<div class="col-md-4 col-md-offset-4">
+							<img src="img/arch-upper.png" class="img-responsive center-block">
+						</div>
+						<div class="col-md-4 hidden-sm hidden-xs pull-right">
+							<h2>What will you build?</h2>
+							<p>pre-order now our<br>
+							<strong>DNA Tinker Studio</strong><br>
+							on <img src="img/indiegogo-logo.jpg" height="20px;" width="auto" alt="Indiegogo logo"> now!</p>
+							<button class="btn btn-primary" type="button">Watch Video</button>
 						</div>
 					</div>
 					<div class="row">
-
-					<div class="col-md-10 col-md-offset-1">
-						<h2 class="text-center">Build robust genetic circuits rapidly and reliably.</h2>
+						<div class="col-md-10 col-md-offset-1">
+							<h2 class="text-center">Build robust genetic circuits rapidly and reliably.</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4 col-md-offset-4">
+							<img src="img/arch-lower.png" class="img-responsive center-block">
+						</div>
 					</div>
 
-					</div>
 				</div>
 
 				<div class="row">
-				<div class="jumbotron dark-purple">
-					<div class="container">
-						<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-						<h2 class="text-center intro">Seemlessly go from computer to petri dish with Synbiota&rsquo;s flexible software/wetware bio-development platform.</h2>
-						</div>
-					</div>
-				</div>
-				</div>
-				</div>
-
-				<div class="container">
-					<div class="row">
-					<div class="col-sm-6 col-md-5 col-md-offset-1">
-						<h3>Design, Build &amp; Grow</h3>
-						<p>Synbiota&rsquo;s integrated wetware / software platform lets you build constructs using modular RDP standardized parts. Reliable, so you can focus more on the real research. <a href="/build">Learn More</a>
-					</div>
-					<div class="col-sm-6 col-md-5">
-						<h3>RDP Standard</h3>
-						<p>Wetware that&rsquo;s standardized and re-usable. Biological parts that fit together like molecular Lego. Assembly made easy. <a href="/standard">How does it work?</a>
-					</div>
-					<div class="col-xs-12">
-						<h2 class="text-center">Start Building Now</h2>
-					</div>
-					</div>
-				</div>
-
-				<div class="jumbotron-group">
-					<div class="row">
-					<div class="col-sm-6 light-blue">
-						<div class="jumbotron">
+					<div class="jumbotron dark-purple">
 						<div class="container">
 							<div class="row">
-							<div class="col-xs-12">
-								<div class="row">
-								<div class="col-xs-10 text-right">
-									<h4>RDP &ldquo;Hello World&rdquo;</h4>
-									<h5>Beginner</h5>
-								</div>
-								<div class="col-xs-2">
-									<p>icon</p>
-								</div>
+								<div class="col-md-8 col-md-offset-2">
+									<h2 class="text-center intro">Move seamlessly from computer to petri dish with Synbiota&rsquo;s rapid DNA Prototyping platform.</h2>
 								</div>
 							</div>
-							</div>
-						</div>
-						</div>
-					</div>
-
-					<div class="col-sm-6 pink">
-						<div class="jumbotron">
-						<div class="container">
 							<div class="row">
-							<div class="col-xs-12">
-								<div class="row">
-								<div class="col-xs-2 text-right">
-									<p>icon</p>
-								</div>
-								<div class="col-xs-10 text-left">
-									<h4>#ScienceHack Violacein Factory</h4>
-									<h5>Intermediate</h5>
-								</div>
+								<div class="col-md-6 col-md-offset-3">
+									<img src="img/homepage-three-icons.png" class="img-responsive">
 								</div>
 							</div>
-							</div>
-						</div>
-						</div>
-					</div>
-					</div>
-
-					<div class="row">
-					<div class="col-sm-6 fern">
-						<div class="jumbotron">
-						<div class="container">
 							<div class="row">
-							<div class="col-xs-12">
-								<div class="row">
-								<div class="col-xs-10 text-right">
-									<h4>Rainbow Factory</h4>
-									<h5>Beginner</h5>
+								<div class="col-md-4 col-md-offset-2">
+									<h3>Design, Build &amp; Grow</h3>
+									<p>Synbiota&rsquo;s integrated suite of wetware and software solutions empowers you to create your own genetic constructs with unparalleled speed and reliability. <a href="/build">Learn More!</a></p>
 								</div>
-								<div class="col-xs-2">
-									<p>icon</p>
-								</div>
+								<div class="col-md-4">
+									<h3>RDP Standard</h3>
+									<p>A new standard for synthetic biology: Rapid DNA Prototyping with modular biological parts that fit together like molecular LEGO. <a href="/standard">How does it work?</a></p>
 								</div>
 							</div>
-							</div>
 						</div>
-						</div>
-					</div>
-
-					<div class="col-sm-6 purple">
-						<div class="jumbotron">
-						<div class="container">
-							<div class="row">
-							<div class="col-xs-12">
-								<div class="row">
-								<div class="col-xs-2 text-right">
-									<p>icon</p>
-								</div>
-								<div class="col-md-10 text-left">
-									<h4>DNA Tinker Studio</h4>
-									<h5>Advanced</h5>
-								</div>
-								</div>
-							</div>
-							</div>
-						</div>
-						</div>
-					</div>
 					</div>
 				</div>
 
 				<div class="container">
 					<div class="row">
-					<div class="col-xs-12 text-center">
-						<h2>Build Your Own RDP Parts</h2>
-						<p>Have a specific part in mind that you don&rsquo;t see here? Interested in creating a new RDP Standard composite to apply to an existing genetic circuit?</p>
-						<button class="btn btn-primary">Apply for Beta Trial Now</button>
+						<div class="col-sm-4 col-sm-offset-2">
+							<div class="border">
+								<div class="row">
+									<div class="col-sm-6 col-sm-offset-3">
+										<img src="img/box-image.png" class="img-responsive center-block">
+									</div>
+								</div>
+								<img src="img/testtube-one.png" class="pull-left">
+								<h5>Beginner</h5>
+								<h4>RDP &ldquo;Hello World&rdquo;</h4>
+							</div>
+						</div>
+						<div class="col-sm-4 col-border">
+							<div class="border">
+								<div class="row">
+									<div class="col-sm-6 col-sm-offset-3">
+										<img src="img/box-image.png" class="img-responsive center-block">
+									</div>
+								</div>
+								<img src="img/testtube-one.png" class="pull-left">
+								<h5>Beginner</h5>
+								<h4>Rainbow Factory</h4>
+							</div>
+						</div>
 					</div>
+					<div class="row">
+						<div class="col-sm-4 col-sm-offset-2">
+							<div class="border">
+								<div class="row">
+									<div class="col-sm-6 col-sm-offset-3">
+										<img src="img/box-image.png" class="img-responsive center-block">
+									</div>
+								</div>
+								<img src="img/testtube-two.png" class="pull-left">
+								<h5>Intermediate</h5>
+								<h4>#ScienceHack<br>
+									Violacein Factory</h4>
+							</div>
+						</div>
+						<div class="col-sm-4 col-border">
+							<div class="border">
+								<div class="row">
+									<div class="col-sm-6 col-sm-offset-3">
+										<img src="img/box-image.png" class="img-responsive center-block">
+									</div>
+								</div>
+								<img src="img/testtube-three.png" class="pull-left">
+								<h5>Advanced</h5>
+								<h4>DNA Tinker<br>
+									Studio</h4>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-8 col-sm-offset-2 text-center">
+							<div class="border">
+								<h2>Build Your Own RDP Parts</h2>
+								<p>Have a specific part in mind that you don&rsquo;t see on our site?<br>
+								Looking to create a new RDP Standard composite to apply to an existing genetic circuit?</p>
+								<button class="btn btn-primary">Apply for Beta Access</button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
 			
 			<!-- Small modal -->
 
-            <div id="myModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-              <div class="modal-dialog modal-sm">
+            <div id="myModal" class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-md">
                 <div class="modal-content text-center">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                     <h4 class="modal-title" id="mySmallModalLabel">Keep in Touch</h4>
                   </div>
                   <div class="modal-body ">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/c3PGZuS94YU" frameborder="0" allowfullscreen class="img-responsive hidden-xs hidden-sm" style="height:315px;"></iframe>
                     <p>Sign up for our newsletter for info on new products, exclusive offers, &amp; awesome project ideas.</p>
                     <form>
                       <input type="text" class="form-control" aria-label="...">
