--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<img src="img/arch-upper.png" class="img-responsive center-block">
 						</div>
 						<div class="col-md-4 hidden-sm hidden-xs pull-right">
-							<h2>What will you build?</h2>
+							<h2 class="disable-margin-padding">What will you build?</h2>
 							<p>pre-order now our<br>
 							<strong>DNA Tinker Studio</strong><br>
 							on <img src="img/indiegogo-logo.jpg" height="20px;" width="auto" alt="Indiegogo logo"> now!</p>
@@ -67,7 +67,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1">
-							<h2 class="text-center">Build robust genetic circuits rapidly and reliably.</h2>
+							<h2 class="text-center disable-margin-padding">Build robust genetic circuits rapidly and reliably.</h2>
 						</div>
 					</div>
 					<div class="row">
