Drafted platform.html and _platform.scss.

--- a/platform.html
+++ b/platform.html
@@ -53,64 +53,71 @@
                 <!-- PLATFORM CONTENT -->
                 <div class="container">
 	                <div class="row">
-	                	<div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 page-header-icon">
-	                		<img src="img/dbg-icon.png" class="pull-left"><h2  class="pull-left">Design, Build &amp; Grow<br>
-	                		Rapidly and Reliably</h2>
+	                	<div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 page-header-icon text-center">
+	                		<img src="img/dbg-icon.png" class="center-block img-responsive">
+	                		<h2>Design, Build &amp; Grow</h2>
+	                	</div>
+	                	<div class="col-xs-12 col-sm-10 col-sm-offset-1 text-center">
+	                		<h2 class="condensed">With Synbiota, virtual and material science are harmonized as genetic designs translate seamlessly from the computer to the petri dish.</h2>
 	                	</div>
 	                </div>
+	            </div>
+	                
+	            <div class="row jumbotron dark-purple">
+					<div class="container">
+		                <div class="row">
+		                	<div class="col-md-11 text-center platform-bubbles">
+		                		<div class="row">
+		                			<div class="center-block">
+			                			<div class="col-sm-3 col-sm-offset-1 col-xs-4 text-center">
+					                		<h3 class="word-bubble">In Silico</h3>
+					                		<p>design in browser<br>
+					                			drag &lsquo;n&rsquo; drop parts</p>
+					                	</div>
+					                	<div class="col-sm-1 text-center col-no-padding">
+					                		<span class="glyphicon glyphicon-arrow-right glyphicon-lg hidden-xs" aria-hidden="true"></span>
+					                	</div>
+					                	<div class="col-sm-3 text-center col-xs-4 ">
+					                		<h3 class="word-bubble">In Vitro</h3>
+					                		<p>assemble/build<br>
+					                			those designs with<br>
+					                			RDP wetware components</p>
+					                	</div>
+					                	<div class="col-sm-1 text-center col-no-padding">
+					                		<span class="glyphicon glyphicon-arrow-right glyphicon-lg hidden-xs" aria-hidden="true"></span>
+					                	</div>
+										<div class="col-sm-3 text-center col-xs-4 ">
+				                			<h3 class="word-bubble">In Vivo</h3>
+				                			<p>grow in bateria<br>
+				                				to see how it functioned<br>
+				                				share experiment results</p>
+				                		</div>
+				                	</div>
+			                	</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
-	                <div class="row text-center">
-	                	<div class="col-md-3 col-xs-6">
-	                		<h3>Rapid</h3>
-	                		<h4>Iterate Rapidly</h4>
-	                		<p>with tools and parts spend hours instead of weeks.</p>
-	                	</div>
-	                	<div class="col-md-3 col-xs-6">
-	                		<h3>Shareable</h3>
-	                		<h4>Standardized parts</h4>
-	                		<p>allowing you to share and assemble rapidly.</p>
-	                	</div>
-	                	<div class="col-md-3 col-xs-6">
-	                		<h3>Reliable</h3>
-	                		<h4>Process Control</h4>
-	                		<p>with an integrated software + wetware solution.</p>
-	                	</div>
-	                	<div class="col-md-3 col-xs-6">
-	                		<h3>Accessible</h3>
-	                		<h4>Less Equipment</h4>
-	                		<p>DIYbio &amp; open source methods keep costs low.</p>
-	                	</div>
-	                </div>
-
+	            <div class="container">
 	                <div class="row">
 	                	<div class="col-sm-12">
-	                		<h2>Synbiota Platform</h2>
-	                		<p>Synbiota is an easy and quick method to learn and build with DNA.</p>
+	                		<h2 class="condensed">The Synbiota Platform</h2>
+	                		<p>Synbiota is a comprehensive platform for rapid DNA prototyping. Elegantly integrating software and wetware solutions, the Synbiota ecosystem comprises a digital DNA lab, compatible biological materials for construction, and tools that enable social sharing, remote experimentation, and knowledge exchange.</p>
 
-	                		<p>It&rsquo;s an integrated software and wetware platform, designed to enable an ever-growing library of standardized DNA parts which communicate to one another using the Rapid DNA Prototyping Standard to build robust genetic constructs—so researchers are free to create, rather than spend valuable time and resources developing parts and constructs from scratch.</p>
+	                		<p>Complex genetic circuits designed on Synbiota’s browser-based digital lab can provide automated instructions for physical assembly using standardized DNA parts that link together with Lego-like intuitiveness. These DNA programs are then booted up in an organism for observation and validation. Protocols and experiments are logged in the online lab book where they may be securely stored and referenced for further iterations, or shared openly for distributed experimentation.</p>
 
-	                		<p>Synbiota brings process improvement to life science, enabling an engineer&rsquo;s approach to biology, and the distribuition and sharing of parts. All of this is brought together in an integrated feedback loop connecting the creation of parts with advanced software, the distribuition and sharing of those parts in a virtual marketplace, and real-world testing and assembly using compatible wetware.</p>
+	                		<p>Strengthening and accelerating the processes of genetic engineering, Synbiota makes rapid DNA prototyping possible. It puts researchers on a higher creative plane, where they can focus on trying many different hypotheses, instead of trying to get one hypothesis to work. Such freedom represents a new era of research and innovation where the power of synthetic biology can be exploited with extraordinary speed, ease, flexibility, and reliability. With Synbiota, virtual and material science are harmonized as genetic designs translate seamlessly from the computer to the petri dish.</p>
 	                	</div>
 	                </div>
 
 	                <div class="row">
-	                	<div class="col-md-8 col-md-offset-2 text-center platform-bubbles">
-	                		<h3 class="word-bubble">In Silico</h3>
-	                		<h3 class="word-bubble">In Vitro</h3>
-	                		<h3 class="word-bubble">In Vivo</h3>
+	                	<div class="col-sm-4 col-sm-offset-2">
+	                		<button class="btn btn-secondary btn-block" type="button"><h5><a href="/standard">Learn About RDP Standard</a></h5></button>
 	                	</div>
-	                </div>
-
-	                <div class="row">
-	                	<div class="col-sm-12">
-	                		<h2>Integrated software / wetware solution</h2>
-	                		<ul>
-	                			<li>In Silico—improves your invitro acceptance—via RDP</li>
-	                			<li>In Vitro—RDP Assembly better &amp; faster than other options</li>
-	                			<li>In Vivo—reliable, flexible—because every part fits together—compatible</li>
-	                		</ul>
+	                	<div class="col-sm-4">
+	                		<button class="btn btn-secondary btn-block" type="button"><h5><a href="/build">Start Building Now</a></h5></button>
 	                	</div>
-	                </div>
 	            </div>
 
 			</section>
