Adding about page styling

--- a/about.html
+++ b/about.html
@@ -49,12 +49,19 @@
 		<div class="container-fluid">
 			<header data-topper></header>
 
-			<section>
+			<section id="about">
                 <!-- ABOUT ME CONTENT -->
                 <div class="container">
 	                <div class="row">
 	                	<div class="col-md-12">
-			                <h3>Synbiota's mission is to standardize biotechnology and make it accessible to everyone.</h3>
+                            <h1>About Us</h1>
+                            <img src="/img/dbg-icon.png" alt="Design. Build. Grow">
+                            
+                            <div class="row">  
+                                <div class="col-md-6">
+                                    <h3>Synbiota's mission is to standardize biotechnology and make it accessible to everyone.</h3>
+                                </div>
+                            </div>
 			                
 			                <p class="p-highlight">Synbiota is a set of rapid prototyping tools that move synthetic biology out of institutions, unversities, and large corporations, by lowering the threshold of entry for doing it and using it to solve problems.</p>
 
@@ -64,24 +71,31 @@
 
 			                <p>The standardized DNA parts are complemented with a DNA design software for designing and conceptualizing your genetic circuits before you assemble them.  Synbiota's electronic lab book is host protocols and gives you the ability to log your experimental results and relate it back to the DNA you designed, assembled, and tested.</p>
 
-			                <h3>Company Principles</h3>
+			                <div id="social">
+    			                <div class="row">
+                                    <div class="col-md-9 col-md-offset-1">
+                                        <hr>
+                                        <p>More info and press available on our 
+                                            <a href="http://press.synbiota.com/company" title="Synbiota Press" target="_blank">press page</a> and 
+                                            <a href="http://blog.synbiota.com/" title="Synbiota Blog" target="_blank">blog</a>.</p>   
+                                    </div>
+    			                </div>
+    			                <div class="row icons">
+                                    <div class="col-md-4 col-md-offset-4">
+                                        <ul>
+                                            <li><a href="https://angel.co/synbiota" class="angelco" 
+                                                    title="Synbiota on Angel Co" target="_blank">Angel co</a></li>
+                                            <li><a href="https://www.linkedin.com/company/synbiota" class="linkedin" 
+                                                    title="Synbiota on LinkedIn" target="_blank">LinkedIn</a></li>
+                                            <li><a href="http://facebook.com/synbiota" class="facebook" 
+                                                title="Synbiota on Facebook" target="_blank">Facebook</a></li>
+                                            <li><a href="http://twitter.com/synbiota" class="twitter" 
+                                                title="Synbiota on Twitter" target="_blank">Twitter</a></li>
+                                        </ul>
+                                    </div>
+    			                </div>
+			                </div>
 
-			                <dl>
-			                	<dt>Lab Assistance</dt>
-			                	<dd>Synbiota interprets work environment &amp; context to provide shortcuts.</dd>
-			                	<dt>Powerful &amp; Intuitive</dt>
-			                	<dd>Easy things are easy, hard things are possible.</dd>
-			                	<dt>Delightful to Use</dt>
-			                	<dd>Users always want to return to the product.</dd>
-			                	<dt>Trust Through Quality</dt>
-			                	<dd>All components are reliable, so users trust our product.</dd>
-			                	<dt>Ethical</dt>
-			                	<dd>Respects IP, is secure, respects nature, upholds the law.</dd>
-			                </dl>
-
-			                <h3>Press</h3>
-			                <h3>Contact</h3>
-			                <h3>Careers</h3>
 			            </div>
 		            </div>
 		        </div>
