--- a/build.html
+++ b/build.html
@@ -185,7 +185,7 @@
                                 <div class="form-group">  
                                     <div class="col-md-4">
                                         <button type="submit" 
-                                            class="btn btn-secondary btn-block blue-bg">Apply
+                                            class="btn btn-secondary btn-block">Apply
                                         </button>
                                     </div>
                                 </div>
