Fixing links for sub folder directory on staging

--- a/mvc/topper/topper.html
+++ b/mvc/topper/topper.html
@@ -6,9 +6,9 @@
       </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class=""><a class="" href="/about">About</a></li>
-            <li class=""><a href="/standard">RDP Standard</a></li>
-            <li class=""><a href="/marketplace_items">DNA market</a></li>
+            <li class=""><a class="" href="/about.html">About</a></li>
+            <li class=""><a href="/standard.html">RDP Standard</a></li>
+            <li class=""><a href="/marketplace_items.html">DNA market</a></li>
             <li><a href="http://blog.synbiota.com" target="_blank">Blog</a></li>
           </ul>
 
