--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 		    type='text/css'>
 
 		<!-- Bootstrap -->
-		<link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" 
+		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" 
 		    media="screen, projection" 
 		    rel="stylesheet" 
 		    type="text/css" />
-		<link href="/css/print.css" 
+		<link href="css/print.css" 
 		    media="print" 
 		    rel="stylesheet" 
 		    type="text/css" />
 		<!--[if IE]>
-			<link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+			<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
 		<![endif]-->
-		<link href="/css/bootstrap_conf.css" rel="stylesheet">
+		<link href="css/bootstrap_conf.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -62,7 +62,7 @@
 							<p>pre-order now our<br>
 							<strong>DNA Tinker Studio</strong><br>
 							on <img src="img/indiegogo-logo.jpg" height="20px;" width="auto" alt="Indiegogo logo"> now!</p>
-							<button class="btn btn-primary" type="button">Watch Video</button>
+							<button class="btn btn-primary" type="button" data-toggle="modal" data-target="#myModal">Watch Video</button>
 						</div>
 					</div>
 					<div class="row">
@@ -93,11 +93,11 @@
 						<div class="row">
 							<div class="col-md-4 col-md-offset-2">
 								<h3>Design, Build &amp; Grow</h3>
-								<p>Synbiota&rsquo;s integrated suite of wetware and software solutions empowers you to create your own genetic constructs with unparalleled speed and reliability. <a href="/build">Learn More!</a></p>
+								<p>Synbiota&rsquo;s integrated suite of wetware and software solutions empowers you to create your own genetic constructs with unparalleled speed and reliability. <a href="build">Learn More!</a></p>
 							</div>
 							<div class="col-md-4">
 								<h3>RDP Standard</h3>
-								<p>A new standard for synthetic biology: Rapid DNA Prototyping with modular biological parts that fit together like molecular LEGO. <a href="/standard">How does it work?</a></p>
+								<p>A new standard for synthetic biology: Rapid DNA Prototyping with modular biological parts that fit together like molecular LEGO. <a href="standard">How does it work?</a></p>
 							</div>
 						</div>
 					</div>
@@ -208,20 +208,20 @@
 		</script>
 
 		<!-- 3rd Party Dependencies -->
-		<script src="/bower_components/angular/angular.js"></script>
-		<script src="/bower_components/angular-route/angular-route.js"></script>
-		<script src="/bower_components/jquery/dist/jquery.js"></script>
-		<script src="/bower_components/jquery-cookie/jquery.cookie.js"></script>
-		<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular-route/angular-route.js"></script>
+		<script src="bower_components/jquery/dist/jquery.js"></script>
+		<script src="bower_components/jquery-cookie/jquery.cookie.js"></script>
+		<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
 
 		<!-- Angular wiring -->
-		<script src="/js/app.js"></script>
+		<script src="js/app.js"></script>
 
 		<!-- Folders contain module mvc files -->
-		<script src="/mvc/topper/topper.js"></script>
-		<script src="/mvc/topper/topper-directive.js"></script>
-		<script src="/mvc/foot/foot.js"></script>
-		<script src="/mvc/foot/foot-directive.js"></script>
+		<script src="mvc/topper/topper.js"></script>
+		<script src="mvc/topper/topper-directive.js"></script>
+		<script src="mvc/foot/foot.js"></script>
+		<script src="mvc/foot/foot-directive.js"></script>
 
 	</body>
 </html>
