--- a/marketplace_items.html
+++ b/marketplace_items.html
@@ -18,18 +18,18 @@
 		    type='text/css'>
 
 		<!-- Bootstrap -->
-		<link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" 
+		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" 
 		    media="screen, projection" 
 		    rel="stylesheet" 
 		    type="text/css" />
-		<link href="/css/print.css" 
+		<link href="css/print.css" 
 		    media="print" 
 		    rel="stylesheet" 
 		    type="text/css" />
 		<!--[if IE]>
-			<link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+			<link href="css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
 		<![endif]-->
-		<link href="/css/bootstrap_conf.css" rel="stylesheet">
+		<link href="css/bootstrap_conf.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -67,20 +67,20 @@
 		</script>
 
 		<!-- 3rd Party Dependencies -->
-		<script src="/bower_components/angular/angular.js"></script>
-		<script src="/bower_components/angular-route/angular-route.js"></script>
-		<script src="/bower_components/jquery/dist/jquery.js"></script>
-		<script src="/bower_components/jquery-cookie/jquery.cookie.js"></script>
-		<script src="/bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular-route/angular-route.js"></script>
+		<script src="bower_components/jquery/dist/jquery.js"></script>
+		<script src="bower_components/jquery-cookie/jquery.cookie.js"></script>
+		<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
 
 		<!-- Angular wiring -->
-		<script src="/js/app.js"></script>
+		<script src="js/app.js"></script>
 
 		<!-- Folders contain module mvc files -->
-		<script src="/mvc/topper/topper.js"></script>
-		<script src="/mvc/topper/topper-directive.js"></script>
-		<script src="/mvc/foot/foot.js"></script>
-		<script src="/mvc/foot/foot-directive.js"></script>
+		<script src="mvc/topper/topper.js"></script>
+		<script src="mvc/topper/topper-directive.js"></script>
+		<script src="mvc/foot/foot.js"></script>
+		<script src="mvc/foot/foot-directive.js"></script>
 
 	</body>
 </html>
